# Aletheias-Quest-Competition

./: .gitignore  NOTES.md  README.md  context7.json  debug_self_eval.py  dry.yaml  llms.txt  requirements-dev.txt  requirements.txt  setup_dev.sh  submit.py
baselines/: dyl_probe_organism.ipynb  example.ipynb  followup_probe.ipynb  followup_probe.npz  followup_probe_organism.ipynb  llm_judge.ipynb  llm_self_eval.ipynb  mean_probe.ipynb  mean_probe_fast.ipynb  (+4 more)
leaderboard/: .gitignore  DATASETS.md  DESIGN.md  Dockerfile  FARGATE-MIGRATION.md  README.md  pyproject.toml
leaderboard/fargate/: Dockerfile.probe  Dockerfile.runner  build_image.py  infra.py  red_team.py  run_task.py  runner_main.py  smoke_test.py
leaderboard/fargate/smoke_submission/submission/: smoke.ipynb
leaderboard/scripts/: deploy_space.py  make_fake_dataset.py  wipe_bucket.py
leaderboard/space/: README.md
leaderboard/src/aletheia_runner/: __init__.py  app.py  archive.py  config.py  data.py  dryrun.py  executor.py  fargate_backend.py  log.py  metrics.py  ndif.py  pipeline.py  ratelimit.py  registry.py  results.py  scoring.py  trace.py
leaderboard/src/aletheia_runner/sandbox/: __init__.py  _run_entry.py  egress.py  landlock.py  probe.py  runner.py  seccomp.py
leaderboard/src/aletheia_runner/web/: index.html
leaderboard/tests/: test_app.py  test_archive.py  test_cancel_timeout.py  test_config.py  test_egress.py  test_landlock.py  test_pipeline.py  test_ratelimit.py  test_redteam_exfil.py  test_registry.py  test_results.py  test_scoring.py
leaderboard/tests/fixtures/: fixture.ipynb  labels.csv
(+95 files in other folders)
