[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia-runner"
version = "0.1.0"
description = "Runner + leaderboard for the Aletheia's Quest deception-detection competition"
requires-python = ">=3.10"
dependencies = [
    "nbclient>=0.10",
    "nbformat>=5.9",
    "ipykernel>=6.29",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "datasets>=2.18",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
space = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "huggingface-hub>=0.23",
    "certifi>=2024.0.0",
    "cryptography>=42",          # MITM egress proxy mints per-host leaf certs
    "boto3>=1.34",              # dispatch submissions to Fargate (FargateBackend)
]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aletheia_runner = ["web/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
